# ocl-1.2.2-AMD-update

./: DESCRIPTION  INDEX  NEWS  runtests.sh
doc/: README
inst/: gather.m  gpuArray.m  isgpuarray.m  oclArray.m  ocl_program_file.m  ocl_tests.m  ocl_to_octave.m
inst/@ocl_double/: atan2.m  cotd.m  cummax.m  max.m  min.m  sum.m  tand.m
inst/@ocl_int16/: cumprod.m
inst/@ocl_int32/: complex.m  std.m
inst/@ocl_int64/: meshgrid.m
inst/@ocl_int8/: findfirst.m  ndgrid.m
inst/@ocl_single/: cosd.m  cumsum.m  max.m  sind.m  sumsq.m
inst/@ocl_uint16/: meansq.m
inst/@ocl_uint32/: mean.m  min.m  repmat.m
inst/@ocl_uint64/: cummin.m  prod.m
inst/@ocl_uint8/: as_index.m  findlast.m
src/: Makefile.in  cl_1_1_dl.h  cl_platform_1_1.h  config.status  configure  configure.ac  ocl_array.cc  ocl_array.h  ocl_array_prog.cc  ocl_array_prog.h  ocl_constant.cc  ocl_context.cc  ocl_context_obj.cc  ocl_context_obj.h  ocl_lib.cc  ocl_lib.h  ocl_memobj.cc  ocl_memobj.h  ocl_octave_versions.h  ocl_ov_matrix.cc  ocl_ov_matrix.h  ocl_ov_matrix_fcns.cc  ocl_ov_matrix_ops.cc  ocl_ov_matrix_ops.h  ocl_ov_program.cc  ocl_ov_program.h  ocl_ov_types.cc  ocl_ov_types.h  ocl_program.cc  ocl_program.h
tests/: test_coerce.m
